--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "migrate": "node scripts/migrate.js"
+
   },
   "dependencies": {
     "axios": "^1.13.2",
