--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
+# Node modules
 node_modules/
 backend/node_modules/
 frontend/node_modules/
+
+# Environment variables
 .env
+*.env
+
+# SQLite databases
+*.db
+*.db-journal
+
+# Uploads folder (images, PDFs)
+uploads/
+
+# Logs
+logs/
+*.log
+
+# Build files
+dist/
+build/
+
+# OS files
+.DS_Store
+Thumbs.db
