--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "nodemon src/server.js",
-    "test": "jest",
+    "test": "jest --runInBand",
     "migrate": "node scripts/migrate.js"
-
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -22,8 +21,11 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.0",
-    "supertest": "^6.3.0"
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
