--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-validator": "^7.3.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.1.7"
